--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-hacker
+title: Python Bootcamp 
+description: Study Guide for Python 
+theme: minima
+google_analytics: G-VZC6J6JDPW
